# server/src/orders/order-errors.mjs
@@ -8,6 +8,9 @@ export const ORDER_ERROR_CODES = Object.freeze({
   MENU_ITEM_SOLD_OUT: 'MENU_ITEM_SOLD_OUT',
   ORDER_CONFLICT: 'ORDER_CONFLICT',
   ORDER_NOT_FOUND: 'ORDER_NOT_FOUND',
+  SESSION_NOT_FOUND: 'SESSION_NOT_FOUND',
+  SESSION_CONFLICT: 'SESSION_CONFLICT',
+  SESSION_HAS_ACTIVE_ORDERS: 'SESSION_HAS_ACTIVE_ORDERS',
   DATABASE_FAILURE: 'DATABASE_FAILURE',
 });
 
